--- a/Task_2_2_1/src/sample/resources/css/game.css
+++ b/Task_2_2_1/src/sample/resources/css/game.css
@@ -1,6 +1,21 @@
+Button {
+    -fx-focus-traversable: false;
+}
+
 BorderPane {
     -fx-pref-width: 1080px;
     -fx-pref-height: 720px;
+    -fx-font-size: 20px;
+}
+
+.top-bar {
+    -fx-padding: 10px 30px;
+    -fx-spacing: 10px;
+    -fx-background-color: rgba(0, 0, 0, 0.1);
+}
+
+.score {
+    -fx-font-size: 30px;
 }
 
 GridPane {
