--- a/Task_2_2_1/src/sample/resources/fxml/game.fxml
+++ b/Task_2_2_1/src/sample/resources/fxml/game.fxml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.control.Label?>
 <BorderPane stylesheets="@../css/game.css"
             xmlns="http://javafx.com/javafx/100.2-internal"
             xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <Button></Button>
+      <HBox styleClass="top-bar">
+         <Button fx:id="menuButton" text="Menu"/>
+         <Button fx:id="restartButton" text="Restart Game"/>
+         <Region HBox.hgrow="ALWAYS"/>
+         <Label styleClass="score">Score:</Label>
+         <Label styleClass="score" fx:id="currentScoreLabel">1</Label>
+         <Label styleClass="score">/</Label>
+         <Label styleClass="score" fx:id="goalScoreLabel">?</Label>
+         <Region HBox.hgrow="ALWAYS"/>
+         <Button fx:id="pauseButton"/>
+      </HBox>
    </top>
    <center>
       <GridPane fx:id="wrapper" styleClass="wrapper">
