--- a/Task_2_2_1/src/sample/resources/css/game.css
+++ b/Task_2_2_1/src/sample/resources/css/game.css
@@ -2,6 +2,10 @@ Button {
     -fx-focus-traversable: false;
 }
 
+.invisible {
+    visibility: hidden;
+}
+
 BorderPane {
     -fx-pref-width: 1080px;
     -fx-pref-height: 720px;
@@ -28,6 +32,12 @@ GridPane {
 
 .playing-field {
     -fx-background-color: #aad750;
+}
+
+.popup-label {
+    -fx-padding: 0 15px;
+    -fx-background-color: rgba(0, 0, 0, 0.75);
+    -fx-text-fill: white;
 }
 
 .dark {
