--- a/Task_2_2_1/src/sample/resources/fxml/game.fxml
+++ b/Task_2_2_1/src/sample/resources/fxml/game.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<?import javafx.scene.control.Label?>
+
 <BorderPane stylesheets="@../css/game.css"
             xmlns="http://javafx.com/javafx/100.2-internal"
             xmlns:fx="http://javafx.com/fxml/1">
@@ -25,6 +26,9 @@
    <center>
       <GridPane fx:id="wrapper" styleClass="wrapper">
          <GridPane fx:id="playingField" styleClass="playing-field"><!--Regions--></GridPane>
+         <GridPane fx:id="popup">
+            <Label fx:id="popupLabel" styleClass="popup-label">You win!</Label>
+         </GridPane>
       </GridPane>
    </center>
 </BorderPane>
