--- a/Task_2_2_1/src/sample/resources/fxml/menu.fxml
+++ b/Task_2_2_1/src/sample/resources/fxml/menu.fxml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<VBox xmlns="http://javafx.com/javafx/10.0.2-internal"
-      xmlns:fx="http://javafx.com/fxml/1"
-      stylesheets="@../css/menu.css">
-
-   <Button fx:id="playButton" text="Play"/>
-   <Button fx:id="helpButton" text="Help"/>
-</VBox>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import java.net.URL?>
+<BorderPane xmlns="http://javafx.com/javafx/100.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1"
+            styleClass="root">
+   <stylesheets>
+      <URL value="@../css/main.css"/>
+      <URL value="@../css/menu.css"/>
+   </stylesheets>
+   <top>
+      <HBox styleClass="nav-bar">
+         <Button disable="true" text="Menu"/>
+         <Button fx:id="helpButton" text="Help"/>
+      </HBox>
+   </top>
+   <center>
+      <VBox styleClass="content">
+         <Button fx:id="playButton" text="Play"/>
+      </VBox>
+   </center>
+</BorderPane>
