--- a/Task_2_2_1/src/main/resources/ru/nsu/fit/markelov/css/main.css
+++ b/Task_2_2_1/src/main/resources/ru/nsu/fit/markelov/css/main.css
@@ -17,6 +17,11 @@
     -fx-spacing: 20px;
 }
 
+.header {
+    -fx-font-size: 30px;
+    -fx-font-weight: bold;
+}
+
 .invisible {
     visibility: hidden;
 }
