--- a/Task_2_2_1/src/main/resources/ru/nsu/fit/markelov/fxml/help.fxml
+++ b/Task_2_2_1/src/main/resources/ru/nsu/fit/markelov/fxml/help.fxml
@@ -10,7 +10,7 @@
 <?import java.net.URL?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<?import ru.nsu.fit.markelov.models.Control?>
+<?import ru.nsu.fit.markelov.javafxutil.Control?>
 <BorderPane xmlns="http://javafx.com/javafx/100.2-internal"
             xmlns:fx="http://javafx.com/fxml/1"
             styleClass="root">
